--- a/D3-Asynchronous/Asynchronous.html
+++ b/D3-Asynchronous/Asynchronous.html
@@ -106,6 +106,9 @@
             document.getElementById("timer").innerText="You have Difused Bomb!"
 
         }
+        console.log(1);
+        console.log(2);
+        console.log(3);
     </script>
 </body>
 </html>
